--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </h1>
                     <h2 class="text-2xl md:text-3xl text-gray-600 mb-8">Desenvolvedor Frontend</h2>
                     <p class="text-lg text-gray-600 mb-8 max-w-lg">
-                        Crio websites e aplicativos responsivos e bonitos com tecnologias modernas e código limpo.
+                        Crio websites e aplicativos responsivos e estilizados com tecnologias modernas e código limpo.
                     </p>
                     <div class="flex space-x-4">
                         <a href="#contact" class="px-8 py-3 bg-emerald-600 text-white font-medium rounded-lg hover:bg-emerald-700 transition shadow-lg">
@@ -120,7 +120,7 @@
                     <p class="text-gray-600 mb-6">
                         Sou um desenvolvedor frontend apaixonado por tecnologia, e tem como hobby criar aplicações web modernas.
                         Especializado em React, Vue.js e princípios de design responsivo. Meu objetivo é construir
-                        experiências de usuário intuitivas que sejam bonitas e funcionais.
+                        experiências de usuário intuitivas que modernas e funcionais.
                     </p>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
                         <div class="flex items-start">
@@ -281,8 +281,8 @@
                             Uma plataforma de e-commerce completa com listagens de produtos, funcionalidade de carrinho e checkout seguro.
                         </p>
                         <div class="flex justify-between items-center">
-                            <a href="#" class="text-emerald-600 hover:text-emerald-700 font-medium" target="_blank">View Project</a>
-                            <a href="#" class="text-gray-500 hover:text-emerald-600" target="_blank">
+                            <a href="https://projeto-integrador-one-rose.vercel.app/" class="text-emerald-600 hover:text-emerald-700 font-medium" target="_blank">View Project</a>
+                            <a href="https://github.com/Eddiewando/ProjetoIntegrador" class="text-gray-500 hover:text-emerald-600" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
